# IS220

./: CMakeLists.txt  LICENSE.md  README.md  defs.h
Algoritmos/: Cola.hpp
Estructuras/Base/: RegionEstatica.hpp
Estructuras/Estaticas/: ColaCircularEstatica.hpp  ColaEstatica.hpp  ListaCircularEstatica.hpp  ListaDobleCircularEstatica.hpp  ListaDobleEstatica.hpp  ListaEstatica.hpp  PilaEstatica.hpp
Estructuras/Interfaces/: ICola.hpp  IPila.hpp
ext/googletest/cmake/: internal_utils.cmake
src/: defs.h
src/Algoritmos/: Cola.hpp
src/Estructuras/Base/: RegionEstatica.hpp
src/Estructuras/Estaticas/: ColaCircularEstatica.hpp  ColaEstatica.hpp  ListaCircularEstatica.hpp  ListaDobleCircularEstatica.hpp  ListaDobleEstatica.hpp  ListaEstatica.hpp  PilaEstatica.hpp
src/Estructuras/Interfaces/: ICola.hpp  IPila.hpp
test/: CMakeLists.txt  test_AlgoritmosCola.cpp  test_ColaCircularEstatica.cpp  test_ColaEstatica.cpp  test_ListaCircularEstatica.cpp  test_ListaDobleCircularEstatica.cpp  test_ListaDobleEstatica.cpp  test_ListaEstatica.cpp  test_PilaEstatica.cpp  test_RegionEstatica.cpp
tests/: CMakeLists.txt  test_RegionEstatica.cpp
